--- a/imagenes.html
+++ b/imagenes.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Imagenes</h1>
     <nav>
-        <a href="/index.html">inicio</a>
-        <a href="/imagenes.html">imagenes</a>
-        <a href="/formulario.html">formulario</a>
+        <a href="index.html">inicio</a>
+        <a href="imagenes.html">imagenes</a>
+        <a href="formulario.html">formulario</a>
     </nav>
     
     <h2>top 6 actrices NOPOR </h2>
