--- a/formulario.html
+++ b/formulario.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Formulario</h1>
     <nav>
-        <a href="/index.html">inicio</a>
-        <a href="/imagenes.html">imagenes</a>
-        <a href="/formulario.html">formulario</a>
+        <a href="index.html">inicio</a>
+        <a href="imagenes.html">imagenes</a>
+        <a href="formulario.html">formulario</a>
     </nav>
 <br>
     <form >
