--- a/formulario.html
+++ b/formulario.html
@@ -29,9 +29,9 @@
         <label for="7">Fecha de Nacimento:</label>
         <input id="7" type="date"><br>
     
-        <button><a href="/ultima.html">Finalizar</a></button>
+        <a href="ultima.html"><button>Finalizar</button></a>
 
-        <button><link href="/ultima.html">Finalizar</button>
+        <button><link href="ultima.html">Finalizar</button>
     </form>
     
     <footer>
