--- a/ultima.html
+++ b/ultima.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/wea.jpg"  alt="NOGHER ERES UNA PERRA">
+    <img src="wea.jpg"  alt="NOGHER ERES UNA PERRA">
 </body>
 </html>
